--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    integrity="sha512-5pmwujJEAqyW6sj2ZDv+uSwHR9KQf1ndF8Aca8n9xwNFqYI+8AOnDRgXn/cbgt/Ah0+WP9EdOdR7j3eND4Lbtg=="
-    crossorigin="anonymous" />
+  
   <!-- Bootstrap Icons CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
   
-  <link rel="stylesheet" href="./global.css" />
-  <link rel="stylesheet" href="./index.css" />
+  <link rel="stylesheet" href="/assets/css/global.css" />
+  <link rel="stylesheet" href="/assets/css/index.css" />
 
 </head>
 
@@ -53,7 +51,7 @@
 <!-- video  -->
 <section>
   <video autoplay loop width="100%">
-      <source src="/public/hola.mp4" type="video/mp4">
+      <source src="/assets/img/hola.mp4" type="video/mp4">
       Tu navegador no soporta el elemento de video.
   </video>
 </section>
@@ -202,7 +200,7 @@
 
                   </div>
                   <div class="col-4">
-                    <img src="/public/file.png" alt="">
+                    <img src="/assets/img/file.png" alt="">
                   </div>
 
                 </div>
