--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- video  -->
 <section>
   <video autoplay loop width="100%">
-      <source src="/assets/img/hola.mp4" type="video/mp4">
+      <source src="./assets/img/hola.mp4" type="video/mp4">
       Tu navegador no soporta el elemento de video.
   </video>
 </section>
@@ -200,7 +200,7 @@
 
                   </div>
                   <div class="col-4">
-                    <img src="/assets/img/file.png" alt="">
+                    <img src="./assets/img/file.png" alt="">
                   </div>
 
                 </div>
