--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <p>
                   Emprendedor, Cocinero y Desarrollador Web especializado en <strong>HTML, CSS, JavaScript y PHP</strong> . 
                   Trabajo bajo la <strong>metodología UX y metodologías agiles</strong> .  Te invito a conocer con mayor 
-                  detalle mi historia, habilidades, estudios y experiencia. 
+                  detalle mi historia y experiencia. 
                 </p>
 
               </div>
