--- a/index.html
+++ b/index.html
@@ -227,22 +227,22 @@
       </div>
       
       <div class="grid-container">
-        <div class="grid-item item1">1</div>
+        <div class="grid-item item1">BUSCAPALABRA</div>
         <div class="grid-item item2">
-          <div class="image-caption3">
+          <!-- <div class="image-caption3">
             <div class="heading-37">Food Hero</div>
             <div class="caption3">
               <p class="aplicacion-web-para">Aplicacion web para proyecto</p>
               <p class="voluntariado-laravel">voluntariado</p>
             </div>
-          </div>
+          </div> -->
         </div>
-        <div class="grid-item item3">3</div>
-        <div class="grid-item item4">4</div>
-        <div class="grid-item item5">5</div>
-        <div class="grid-item item6">6</div>
-        <div class="grid-item item7">7</div>
-        <div class="grid-item item8">8</div>
+        <div class="grid-item item3">KANPON </div>
+        <div class="grid-item item4">AUTOEVALUACION</div>
+        <div class="grid-item item5">ROMPECABEZAS</div>
+        <div class="grid-item item6">QUINTANA DISEÑO</div>
+        <div class="grid-item item7">ESPACIO TIERRA</div>
+        <div class="grid-item item8">RIFFO EVENTOS</div>
       </div>
     </section>
     <section class="button-label">
