--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       </div>
       
       <div class="grid-container">
-        <div class="grid-item item1">BUSCAPALABRA</div>
+        <div class="grid-item item1">AUTOEVALUACION</div>
         <div class="grid-item item2">
           <!-- <div class="image-caption3">
             <div class="heading-37">Food Hero</div>
@@ -237,10 +237,10 @@
             </div>
           </div> -->
         </div>
-        <div class="grid-item item3">KANPON </div>
-        <div class="grid-item item4">AUTOEVALUACION</div>
-        <div class="grid-item item5">ROMPECABEZAS</div>
-        <div class="grid-item item6">QUINTANA DISEÑO</div>
+        <div class="grid-item item3"> </div>
+        <div class="grid-item item4"></div>
+        <div class="grid-item item5"></div>
+        <div class="grid-item item6 text-white">QUINTANA DISEÑO</div>
         <div class="grid-item item7">ESPACIO TIERRA</div>
         <div class="grid-item item8">RIFFO EVENTOS</div>
       </div>
