pruebas y mas pruebas

--- a/index2.html
+++ b/index2.html
@@ -217,7 +217,7 @@
 
 
    
-    <section class="container galeriaTrabajos">
+    <section class="container-fluid galeriaTrabajos">
       
       <div class="mt-5">
         <h1 class="heading-2 mb-5">PORTAFOLIO</h1>
@@ -232,21 +232,22 @@
         <div class="grid-item item1">1</div>
         <div class="grid-item item2">
           <div class="image-caption3">
-            <div class="heading-37">Food Hero</div>
+            <div class="heading-37 text-white">Food Hero</div>
             <div class="caption3">
-              <p class="aplicacion-web-para">Aplicacion web para proyecto</p>
-              <p class="voluntariado-laravel">voluntariado</p>
+              <p class="aplicacion-web-para text-white">Aplicacion web para proyecto</p>
+              <p class="voluntariado-laravel text-white">voluntariado</p>
             </div>
           </div>
         </div>
-        <div class="grid-item item3">3</div>
-        <div class="grid-item item4">4</div>
-        <div class="grid-item item5">5</div>
+        <div class="grid-item item3"></div>
+        <div class="grid-item item4"></div>
+        <div class="grid-item item5"></div>
         <div class="grid-item item6">6</div>
         <div class="grid-item item7">7</div>
         <div class="grid-item item8">8</div>
       </div>
     </section>
+
     <section class="button-label">
       <div class="testimonials">
         <div class="frame-group">
