--- a/index5.html
+++ b/index5.html
@@ -200,11 +200,11 @@ background:#FFFFFF;
             </div> -->
               
                 <div class="container"> 
-                    <div class=" mt-2 mb-2">
+                    <div class=" container mb-2">
                         <h1 class="">Hola! Soy Marcelo Carvajal</h1>
                         <div class=" mt-4">
                             
-                            <p>
+                            <p class="texto">
                                 Emprendedor, Cocinero y Desarrollador Web especializado en <strong>HTML, CSS, JavaScript y PHP</strong> .
                                 Trabajo bajo la <strong>metodología UX y metodologías agiles</strong> . Te invito a conocer con mayor
                                 detalle mi historia y experiencia.
