--- a/index.html
+++ b/index.html
@@ -795,14 +795,14 @@
 
                             <ul class="list-inline ">
                                 <li class="list-inline-item me-2">
-                                    <img src="/assets/img/instagram.png" alt="Instagram" width="50" height="50">
+                                    <img src="./assets/img/instagram.png" alt="Instagram" width="50" height="50">
                                     <a class="text-white" href="https://www.instagram.com/marceloenbcn/"
                                         target="_blank">
                                         @marceloenbcn
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <img src="/assets/img/linkedin.png" alt="LinkedIn" width="45" height="45">
+                                    <img src="./assets/img/linkedin.png" alt="LinkedIn" width="45" height="45">
                                     <a class="text-white" href="https://www.linkedin.com/in/mcarvajal/" target="_blank">
                                         MarceloCarvajal
                                     </a>
