--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
     <!-- Hero -->
     <section id="tab-video" class="et-hero-tabs">
-        <video autoplay loop width="100%">
+        <video autoplay controls loop width="100%">
             <source src="./assets/img/video11.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
         </video>
@@ -393,33 +393,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                            </div>
-
-                            <!-- ACCORDION Experiencia -->
-                            <!-- <div class="accordion-button collapsed ideas  accordion-label" data-bs-toggle="collapse"
-                                    data-bs-target="#accordionExperiencia" aria-expanded="true" aria-controls="collapseOne">
-                                    <div class="row d-flex justify-content-between">
-                                        <div>
-                                            <h2 class="mt-2">Experiencia</h2>
-                                        </div>
-                                        <div class="d-flex">
-                                            <span class="subtitulo-accordion me-2 ">#Hosteleria</span>
-                                            <span class="subtitulo-accordion me-2 ">#Emprendimiento</span>
-                                            <span class="subtitulo-accordion ">#Desarrollador</span>
-                                        </div>
-                                    </div>
-                                </div>
-            
-                                <div id="accordionExperiencia" class="accordion-collapse collapse" aria-labelledby="headingOne"
-                                    data-bs-parent="#accordionExample">
-                                    <div class="accordion-body">
-                                        <div class="">
-                                            <h5 class="texto-accordion">XXXX EXPERIENCIA
-                                        </div>
-                                    </div>
-                                </div> -->
-
-
+                            </div>             
                         </div>
 
                     </div>
