--- a/index.html
+++ b/index.html
@@ -233,6 +233,49 @@
         font-size: 30px;
     }
 
+    .video-container {
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    padding-bottom: 56.25%; /* Aspect ratio 16:9 */
+    overflow: hidden;
+}
+
+.video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 414px) and (max-height: 896px) {
+    .et-hero-tab {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 1;
+        color: #000;
+        letter-spacing: 0.1rem;
+        transition: all 0.5s ease;
+        font-size: 0.6rem;
+    }
+
+    .estrella {
+        margin-top: 200px;
+    }
+
+    .accordion, .link {
+        min-width: 161%;
+    }
+
+    .avatar {
+
+        display: none;
+    }
+}
+
+
     /* SOBRE MI */
 </style>
 
@@ -240,11 +283,14 @@
 
     <!-- Hero -->
     <section id="tab-video" class="et-hero-tabs">
-        <video autoplay controls loop width="100%" poster="./assets/img/imagenVideo.png">
-            <source src="./assets/img/video11.mp4" type="video/mp4">
-            Tu navegador no soporta el elemento de video.
-        </video>
+        <div class="video-container">
+            <video autoplay controls loop poster="./assets/img/imagenVideo.png">
+                <source src="./assets/img/video11.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
+        </div>
     </section>
+    
 
     <div class="et-hero-tabs-container">
         <a class="et-hero mt-2" href="#tab-video"><img class="logo" src="./assets/img/logo.png" width="100"
@@ -262,7 +308,7 @@
         <!-- Section SOBRE MI -->
         <section class="et-slide fondo3" id="tab-flexbox">
             <div class=" mb-2">
-                <img class="" loading="lazy" alt="" src="./public/drawn-misc.svg" />
+                <img class="estrella" loading="lazy" alt="" src="./public/drawn-misc.svg" />
             </div>
 
             <div class="container ">
@@ -417,7 +463,7 @@
 
                     </div>
                     <div class="col-4">
-                        <img src="./assets/img/file.png" alt="">
+                        <img class="avatar" src="./assets/img/file.png" alt="">
                     </div>
                 </div>
             </div>
