--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <section id="tab-video" class="et-hero-tabs">
         <div class="video-container">
             <video autoplay controls loop poster="./assets/img/imagenVideo.png">
-                <source src="./assets/img/video11.mp4" type="video/mp4">
+                <source src="./assets/img/video13.mp4" type="video/mp4">
                 Tu navegador no soporta el elemento de video.
             </video>
         </div>
@@ -317,7 +317,7 @@
                     <div class=" mt-1 p-2">
 
                         <p class="texto">
-                            Emprendedor, Cocinero y Desarrollador Web especializado en <strong class="">HTML,
+                            Chef de profesion, Emprendedor y Desarrollador Web especializado en <strong class="">HTML,
                                 CSS, JavaScript y PHP</strong> .
                             Trabajo bajo la <strong>metodología UX y metodologías agiles</strong> . Te invito a conocer
                             con mayor
@@ -365,7 +365,7 @@
                                             estaba completa.</h5>
                                         <h5 class="texto-accordion mb-3">Un día, descubrí mi pasión por la tecnología y
                                             decidí embarcarme en un nuevo viaje: <span
-                                                style="background-color:#fee400;">la reconversión a desarrollador
+                                                style="background-color:#fee400;">La reconversión a desarrollador
                                                 web</span> .
                                             A través del aprendizaje constante y la adopción de metodologías ágiles y de
                                             UX, transformé mis habilidades
@@ -392,7 +392,7 @@
                                         <h2 class="mt-2">Habilidades</h2>
                                     </div>
                                     <div class="d-flex">
-                                        <span class="subtitulo-accordion me-2 ">#Comunincacion</span>
+                                        <span class="subtitulo-accordion me-2 ">#Comunicacion</span>
                                         <span class="subtitulo-accordion me-2 ">#Liderazgo</span>
                                         <span class="subtitulo-accordion ">#Creatividad</span>
                                     </div>
@@ -493,7 +493,7 @@
                             <div class="modal-body">
                                 <p class="mt-2"><strong>Rompecabezas</strong> es una APP educativa para niños que
                                     permite armar
-                                    rompecabezas de energías renovables. Con una variedad de rompecabezas temáticos, los
+                                    puzzle de energías renovables. Con una variedad de rompecabezas temáticos, los
                                     niños pueden explorar y aprender sobre fuentes de energía limpia como
                                     solar, eólica</p>
                                 <p>Desarrollado en <strong>JavaScript</strong>, permite a los niños aprender mientras
@@ -542,7 +542,7 @@
                                     Mediante la geolocalización, se registran los procesos de creación y entrega de
                                     alimentos.</p>
 
-                                <p> <strong>Características:</strong>:
+                                <p> <strong>Características:</strong>
                                 <ul>
                                     <li>Creacion de Manual de identidad, Marca y propuesta.</li>
                                     <li>Integración de tecnologías Laravel y Vue.js para una experiencia de usuario
