--- a/index2.html
+++ b/index2.html
@@ -64,6 +64,7 @@
 
     <!-- Main -->
     <main class="et-main  mb-4">
+
         <!-- Section SOBRE MI -->
         <section class="et-slide mt-2 fondo3 mb-4" id="tab-flexbox">
             <div class=" ">
@@ -78,7 +79,7 @@
                         <p class="texto">
                             Chef de profesion, Emprendedor y Desarrollador Web especializado en <strong class="">HTML,
                                 CSS, JavaScript y PHP</strong> .
-                            Trabajo bajo la <strong>metodología UX y metodologías agiles</strong> . Te invito a conocer
+                            Trabajo bajo la <strong>metodología UX y metodologías ágiles</strong> . Te invito a conocer
                             con mayor
                             detalle mi historia y experiencia.
                         </p>
@@ -137,7 +138,7 @@
                                             funcionales.</h5>
                                         <h5 class="texto-accordion mb-3">Hoy, combino mi <span
                                                 style="background-color:#fee400;">amor por la comunicacion,
-                                                emprendimiento y tecnología</span>, para crear soluciones digitales
+                                                emprendimiento y tecnología</span>, para crear soluciones digitales que
                                             ofrecen una experiencia memorable, reflejando mi compromiso con la
                                             excelencia y la innovación.</h5>
 
@@ -177,9 +178,9 @@
                                                 Capacidad para transmitir ideas de manera clara y precisa.</p>
 
                                             <p><span style="background-color:#fee400;">Creatividad e Innovación:</span>
-                                                Enfoque creativo para ofrecer soluciones únicas en diseño.</p>
+                                                Enfoque creativo para ofrecer soluciones únicas en tu diseño.</p>
 
-                                            <p><span style="background-color:#fee400;">Habilidades Técnicas en
+                                            <p><span style="background-color:#fee400;">Habilidades y Técnicas en
                                                     Desarrollo Web:</span> Domínio de HTML, CSS, JavaScript y PHP.
                                                 Experiencia con Laravel, Vue.js, Git, Wordpress, SQL.</p>
 
@@ -288,7 +289,7 @@
                     <div class="col-md-6 border fondo1 d-flex justify-content-center align-items-center mb-5">
                         <!-- Carousel wrapper -->
                         <div id="carouselBasicExample" class="carousel slide carousel-dark" data-bs-ride="carousel"
-                            data-bs-interval="8000">
+                            data-bs-interval="12000">
                             <!-- Inner -->
                             <div class="carousel-inner">
                                 <!-- Single item -->
@@ -373,8 +374,6 @@
 
         </section>
 
-
-
         <!-- Section FORMULARIO -->
         <section class="et-slide fondo " id="tab-other">
             <div class="contact-wrapper">
@@ -446,17 +445,17 @@
         </section>
 
         <!-- Section FOOTER -->
-        <!-- <section>
-            <footer class="footer">
-                <div class="small-paragraph1 mt-3">Todos los derechos reservados 2024</div>
+       <section>
+            <footer class="footer fondo1">
+                <div class="small-paragraph1 mt-5">Coding with love++   - CopyRight 2024 -</div>
 
-                <div class="links-wrapper mt-3">
-                    <div class="link2">Marcelo Carvajal</div>
+                <div class="small-paragraph1 mt-5">
+                    <div class="link2">Barcelona</div>
 
                 </div>
 
             </footer>
-        </section> -->
+        </section>
 
     </main>
 
@@ -495,15 +494,9 @@
       {{/gallery}}
     </script>
 
-
-
-
 </body>
 
 </html>
-
-
-
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
@@ -528,9 +521,6 @@
         });
     });
 </script>
-
-
-
 
 <script>
 
