--- a/index1.html
+++ b/index1.html
@@ -72,7 +72,7 @@
 
             <div class="container ">
                 <div class=" container fondo3 border-me">
-                    <h1 class="p-3">Soy <span style="background-color:#fee400;">Marcelo Carvajal</span></h1>
+                    <h1 class="p-3">Soy <span style="background-color:#fee400;">SoyMarcelo</span></h1>
                     <div class=" mt-1 p-2">
 
                         <p class="texto">
