--- a/index.html
+++ b/index.html
@@ -140,17 +140,16 @@
                                         que me enseñaron la importancia de la <span
                                             style="background-color:#fee400;">innovación y el trabajo en
                                             equipo</span> </p>
-                                    <p class="mb-3">
+                                    <p >
                                         Un día, descubrí mi pasión por la tecnología y
                                         decidí embarcarme en un nuevo viaje: <span style="background-color:#fee400;">La
                                             reconversión a desarrollador
                                             web</span> .
-                                        A través del aprendizaje constante y la adopción de metodologías ágiles y de
-                                        UX, transformé mis habilidades
-                                        en herramientas para diseñar y desarrollar aplicaciones web intuitivas y
-                                        funcionales. "}
-
-                                    </p>
+                                     </p>
+                                     <p class="mb-3">A través del aprendizaje constante y la adopción de metodologías ágiles y de
+                                    UX, transformé mis habilidades
+                                    en herramientas para diseñar y desarrollar aplicaciones web intuitivas y
+                                    funcionales. "}</p>
 
 
                                 </li>
@@ -209,7 +208,7 @@
             <div class="testimonials" >
                 <div class="">
                     <div class="col-10">
-                        <h1 class="tituloSection">Portafolio</h1>
+                        <h1 class="tituloSection">Portfolio</h1>
                     </div>
                     <div class="row">
                         <div class="col-10">
