--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="author" content="Marcelo Carvajal - Barcelona">
     <meta name="description"
         content="Comunicador, Emprendedor y Desarrollador Web especializado en HTML, CSS, JavaScript y PHP . Trabajo bajo la metodología UX y metodologías ágiles . Te invito a conocer con mayor detalle mi historia y experiencia.">
+    <meta name="google-site-verification" content="ksPXDw-0tZQ9GOIIfps-JYa4V1WhwjcG_FQbOhYjrGo" />
+    <meta name="msvalidate.01" content="2D1C9F326DEBF18D471FE0AC7C7411A5" />
 
     <title>Soy Marcelo - Desarrollador Web: Transformando Experiencia en Soluciones Digitales</title>
 
@@ -23,6 +25,15 @@
     <script src="./assets/js/script.js"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VRKM97JBGQ"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-VRKM97JBGQ');
+</script>
 
 
 <body>
