--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
                                 </li>
                                 <li class="list-inline-item">
                                     <img src="./assets/img/linkedin.png" alt="LinkedIn" width="45" height="45">
-                                    <a class="text-white" href="https://www.linkedin.com/in/mcarvajal/" target="_blank">
-                                        MarceloCarvajal
+                                    <a class="text-white" href="https://www.linkedin.com/in/soymarcelo/" target="_blank">
+                                        SoyMarcelo
                                     </a>
                                 </li>
                             </ul>
